--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -53,7 +53,7 @@
                 <li th:each="menu : ${menus}">
                 	<a href="#">
                 		<i class="fa fa fa-bar-chart-o" th:class="${menu.icon}"></i>
-                    	<span class="nav-label" th:text="${menu.menuName}">一级菜单</span> 
+                    	<span class="nav-label" th:text="${menu.menuName}">一级菜单</span>
                     	<span class="fa arrow"></span>
                 	</a>
                    <ul class="nav nav-second-level collapse">
@@ -129,13 +129,13 @@
     </div>
     <!--右侧部分结束-->
 </div>
-<!-- 全局js -->
+<!-- 全局js aaa-->
 <script th:src="@{/js/jquery.min.js}"></script>
 <script th:src="@{/js/bootstrap.min.js}"></script>
 <script th:src="@{/js/plugins/metisMenu/jquery.metisMenu.js}"></script>
 <script th:src="@{/js/plugins/slimscroll/jquery.slimscroll.min.js}"></script>
 <script th:src="@{/ajax/libs/blockUI/jquery.blockUI.js}"></script>
-<script src="http://tajs.qq.com/stats?sId=62048022"></script>
+<!--<script src="http://tajs.qq.com/stats?sId=62048022"></script>-->
 <script th:src="@{/ruoyi/js/ry-ui.js?v=3.1.0}"></script>
 <script th:src="@{/ruoyi/index.js}"></script>
 <script th:src="@{/ajax/libs/fullscreen/jquery.fullscreen.js}"></script>
