--- a/src/main/resources/templates/include.html
+++ b/src/main/resources/templates/include.html
@@ -13,7 +13,7 @@
 	<link th:href="@{/css/animate.css}" rel="stylesheet"/>
 	<link th:href="@{/css/style.css}" rel="stylesheet"/>
 	<link th:href="@{/ajax/libs/select/select2.css}" rel="stylesheet"/>
-	<link th:href="@{/aaa/css/ry-ui.css}" rel="stylesheet"/>
+	<link th:href="@{/aaa/css/dd-ui.css}" rel="stylesheet"/>
 </head>
 <div th:fragment="footer">
 	<script th:src="@{/js/jquery.min.js}"></script>
@@ -39,7 +39,7 @@
 	<script th:src="@{/ajax/libs/layer/layer.min.js}"></script>
 	<script th:src="@{/ajax/libs/layui/layui.js}"></script>
 	<script th:src="@{/aaa/js/common.js?v=3.1.0}"></script>
-	<script th:src="@{/aaa/js/ry-ui.js?v=3.1.0}"></script>
+	<script th:src="@{/aaa/js/dd-ui.js?v=3.1.0}"></script>
 	<script src="http://tajs.qq.com/stats?sId=62048022"></script>
 	<script th:inline="javascript"> var ctx = [[@{/}]]; </script>
 </div>
