--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -15,7 +15,7 @@
     <link th:href="@{/css/font-awesome.min.css}" rel="stylesheet"/>
     <link th:href="@{/css/animate.css}" rel="stylesheet"/>
     <link th:href="@{/css/style.css}" rel="stylesheet"/>
-    <link th:href="@{/aaa/css/ry-ui.css?v=3.1.0}" rel="stylesheet"/>
+    <link th:href="@{/aaa/css/dd-ui.css?v=3.1.0}" rel="stylesheet"/>
     <style type="text/css">
         .nav > li:hover .dropdown-menu {display: block;}
         #content-main.max { height: calc(100% - 110px); overflow: hidden; width: 100%; height: 100%; left: 0px; position: absolute; top: 0px; z-index: 9998; margin: 0; }
@@ -136,7 +136,7 @@
 <script th:src="@{/js/plugins/slimscroll/jquery.slimscroll.min.js}"></script>
 <script th:src="@{/ajax/libs/blockUI/jquery.blockUI.js}"></script>
 <!--<script src="http://tajs.qq.com/stats?sId=62048022"></script>-->
-<script th:src="@{/aaa/js/ry-ui.js?v=3.1.0}"></script>
+<script th:src="@{/aaa/js/dd-ui.js?v=3.1.0}"></script>
 <script th:src="@{/aaa/index.js}"></script>
 <script th:src="@{/ajax/libs/fullscreen/jquery.fullscreen.js}"></script>
 </body>
